feat: add llm_predictor package for LLM-based code clone detection
- Added `predictor.py` for OpenAI-based prediction from code fragment pairs
- Added `config_loader.py` to manage config and prompt loading
- Added `logger.py` for unified logging with console and file output
- Included `run_prediction.py` as a runnable script for batch prediction
- Added prompt file `java_clone_detect.md` under `config/prompts`

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
-# Ignore IntelliJ IDEA project files
+# IntelliJ IDEA project files and directories
 .idea/
+# Python compiled bytecode cache directories
+__pycache__/
+# Log files of any type
+*.log
+# Configuration files with .ini extension
+*.ini
